--- a/application/index/View/login/index.html
+++ b/application/index/View/login/index.html
@@ -1,1 +1,44 @@
-欢迎光临
+<!DOCTYPE>
+<html>
+<head>
+    <title>登录</title>
+</head>
+<style>
+    dl{
+        text-align:center;
+        border:2px solid #00CC99;
+        margin-top:100px;
+        margin-bottom:100px;
+        margin-right:400px;
+        margin-left:400px;
+    }
+</style>
+<body>
+<div id="login_form">
+    <form action="login" method="post">
+        <dl>
+
+            <dt>
+            <p>用户名：<input type="text" name="user_name"></p>
+            </dt>
+
+
+            <dt>
+            <p>密码：<input type="password" name="user_passwd"></p>
+            </dt>
+
+            <dt>
+            <div><input name="code" type="text" placeholder="输入验证码" style="width：100px;"><span>
+            <img id="verify_img" src="{:captcha_src()}" alt="点击验证码" onclick="this.src='{:captcha_src()}'+'?'+Math.random()"></div>
+            </span>
+            </dt>
+
+            <dt>
+            <p><input type="submit" value="登录"></p>
+            <a href="{:url('Regist/index')}">注册</a>
+            </dt>
+        </dl>
+    </form>
+</div>
+</body>
+</html>
